force-app/main/default/objects/Pilot__c/Pilot__c.object-meta.xml
<CustomObject>
    <label>Pilot</label>
    <nameField>
        <label>Pilot Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pilots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>