force-app/main/default/objects/Pilot__c/fields/designation__c.field-meta.xml
<CustomField>
    <fullName>designation__c</fullName>
    <label>designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>