force-app/main/default/objects/Pilot__c/fields/pilotlicense__c.field-meta.xml
<CustomField>
    <fullName>pilotlicense__c</fullName>
    <label>pilotlicense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>